--- a/FrontEnd/src/app/Dashboard/calendario/calendario.component.html
+++ b/FrontEnd/src/app/Dashboard/calendario/calendario.component.html
@@ -18,7 +18,7 @@
           <input type="date" name="final" class="form-control" [(ngModel)]="clase.final" id="final"  [ngModelOptions]="{standalone: true}" placeholder="Final">
         </div>
 
-        <button type="submit" (click)="this.buscarClase()" data-bs-toggle="modal"
+        <button type="submit" (click)="this.copiarCalendario()" data-bs-toggle="modal"
         data-bs-target="#BuscarClase" class="btn btn-primary">Copiar Calendario</button>
 
       </form>
