--- a/FrontEndCliente/src/app/Componentes/registro/registro.component.html
+++ b/FrontEndCliente/src/app/Componentes/registro/registro.component.html
@@ -24,7 +24,7 @@
                                     <span class="marginLeft">
                                         <i class="bi bi-envelope"></i>
                                     </span>
-                                    <input type="email" name="email" class="form-control" [(ngModel)]="cliente.email"
+                                    <input type="email" name="email" class="form-control" [(ngModel)]="cliente.correo"
                                         id="myEmail" placeholder="E-mail">
                                 </div>
                             </div>
